added: getSongText, getFilteredSongs
